k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torquelab
spec:
  selector:
    matchLabels:
      app: torquelab
  replicas: 1
  template:
    metadata:
      labels:
        app: torquelab
    spec:
      containers:
        - name: torquelab
          image: torquelab:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: torquelabfe:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
