k8s/base/service-fe.yaml
apiVersion: v1
kind: Service
metaData:
  name: frontend
spec:
  selector:
    app: frontend
ports:
    port: 80
    targetPort: 5173
type: ClusterIP
