k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torquelab
spec:
  selector:
    app: torquelab
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
